added demos using factories

--- a/src/main/resources/styles/glyphs.css
+++ b/src/main/resources/styles/glyphs.css
@@ -3,25 +3,60 @@
 }
 
 .glyph-icon{
+    -fx-text-fill: -icons-color;
     -fx-fill: -icons-color;
+    -glyph-size: 48px;
+}
+
+.glyph-icon:hover{
+    -fx-effect:  dropshadow(three-pass-box, rgba(0,0,0,0.2), 4, 0, 0, 0);
 }
 
 .bluesky-icon{
+    -glyph-name: "CLOUD";
     -icons-color: blue;
     -fx-fill: linear-gradient(-icons-color 0%, derive(-icons-color, 100%) 30%, derive(blueviolet, 30%) 85%);
 }
 
+.bluesky-icon:hover{
+    -glyph-name: "CLOUDY";
+    -icons-color: yellowgreen;
+    -fx-effect:  dropshadow(three-pass-box, rgba(156,115,241,0.6), 10, 0, 0, 0);
+}
+
+.bluesky-icon:pressed{
+    -glyph-name: "DAY_CLOUDY";
+    -icons-color: yellow;
+    -fx-effect:  dropshadow(three-pass-box, rgba(0,0,0,1.0), 10, 0, 0, 0);
+}
+
+
 .thumbs-up-icon{
     -glyph-name: "THUMBS_UP";
-    -glyph-size: 6em;
     -icons-color: yellowgreen;
+}
+.thumbs-up-icon:hover{
+    -fx-effect:  dropshadow(three-pass-box, rgba(154,205,55,0.7), 10, 0, 0, 0);
+}
+
+.thumbs-up-icon:pressed{
+    -fx-effect:  dropshadow(three-pass-box, rgba(0,0,0,1.0), 10, 0, 0, 0);
 }
 
 .thumbs-down-icon{
     -glyph-name: "THUMBS_DOWN";
-    -glyph-size: 6em;
     -icons-color: red;
 }
+
+.thumbs-down-icon:hover{
+    -fx-effect:  dropshadow(three-pass-box, rgba(255,0,0,0.7), 10, 0, 0, 0);
+}
+
+.thumbs-down-icon:pressed{
+    -fx-effect:  dropshadow(three-pass-box, rgba(0,0,0,1.0), 10, 0, 0, 0);
+}
+
+
 
 
 
